# yakki-schedule

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: api.rs  main.rs  models.rs  solver.rs
docs/: SYSTEM_SPEC_HE.html
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: BellScheduleEditor.tsx  ClassesManager.tsx  GenerateSchedule.tsx  RoomsManager.tsx  ScheduleView.tsx  SettingsPanel.tsx  Sidebar.tsx  SubjectsManager.tsx  TeachersManager.tsx
frontend/src/i18n/: he.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
